--- a/html/login.html
+++ b/html/login.html
@@ -10,13 +10,29 @@
     <!-- Navigation -->
     <nav class="navbar">
       <div class="nav-container">
-        <div class="nav-logo" onclick="logoRefreshAnimation()">
-          <div class="logo-placeholder">
-            <img
-              src="/logo/without_bg_logo.png"
-              alt="Shantisangho Logo"
-              class="logo-icon"
-            />
+        <div class="nav-logo" onclick="logoRefresh()">
+          <div class="logo-icon">
+            <svg
+              width="40"
+              height="40"
+              viewBox="0 0 40 40"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <circle
+                cx="20"
+                cy="20"
+                r="19"
+                stroke="#1e7e34"
+                stroke-width="2"
+              />
+              <path d="m20 8 8 10-8 4 8 4Z" fill="#1e7e34" />
+              <path
+                d="M16 18c0-1 .5-2 1.5-2h5c1-2 2.5-2 3.5 0v6c0 1-.5 2-1.5 2h-5c-1 0-1.5-1-1.5-2Z"
+                fill="#4caf50"
+              />
+              <circle cx="20" cy="30" r="2" fill="#2196f3" />
+            </svg>
           </div>
           <div class="logo-text">
             <h1>শান্তিসংঘ</h1>
@@ -28,9 +44,7 @@
           <button class="nav-btn" onclick="navigateTo('index.html')">
             Home
           </button>
-          <button class="nav-btn active" onclick="navigateTo('login.html')">
-            Login
-          </button>
+          <button class="nav-btn active">Login</button>
           <button class="nav-btn" onclick="navigateTo('signup.html')">
             Sign Up
           </button>
@@ -55,15 +69,10 @@
       <!-- Mobile Menu -->
       <div class="mobile-menu" id="mobileMenu">
         <div class="mobile-menu-content">
-          <button class="mobile-nav-btn" onclick="navigateTo('index.html')">
+          <button class="mobile-nav-btn" onclick="navigateTo('mainpage.html')">
             Home
           </button>
-          <button
-            class="mobile-nav-btn active"
-            onclick="navigateTo('login.html')"
-          >
-            Login
-          </button>
+          <button class="mobile-nav-btn active">Login</button>
           <button class="mobile-nav-btn" onclick="navigateTo('signup.html')">
             Sign Up
           </button>
@@ -82,7 +91,10 @@
     <div class="background-container">
       <div class="gradient-bg"></div>
       <div class="animated-patterns">
-        <!-- Islamic geometric patterns will be added via JavaScript -->
+        <div class="floating-shape shape-1"></div>
+        <div class="floating-shape shape-2"></div>
+        <div class="floating-shape shape-3"></div>
+        <div class="islamic-star star-1"></div>
       </div>
     </div>
 
@@ -92,11 +104,27 @@
         <div class="login-card">
           <div class="login-header">
             <div class="login-logo">
-              <img
-                src="/logo/without_bg_logo.png"
-                alt="Shantisangho Logo"
-                class="login-logo-animation"
-              />
+              <svg
+                width="80"
+                height="80"
+                viewBox="0 0 80 80"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <circle
+                  cx="40"
+                  cy="40"
+                  r="38"
+                  stroke="#1e7e34"
+                  stroke-width="4"
+                />
+                <path d="M40 16L56 40L40 64L16 40Z" fill="#1e7e34" />
+                <path
+                  d="M28 28c0-2 1-4 3-4h10c2-4 5-4 7 0v12c0 2-1 4-3 4H31c-2 0-3-2-3-4Z"
+                  fill="#4caf50"
+                />
+                <circle cx="40" cy="64" r="4" fill="#2196f3" />
+              </svg>
             </div>
             <div class="login-title">
               <h1>Welcome Back</h1>
@@ -308,8 +336,8 @@
             <div class="help-contacts">
               <div class="help-contact">
                 <span>📧</span>
-                <a href="mailto:shanti.songho2@gmail.com"
-                  >shanti.songho2@gmail.com</a
+                <a href="mailto:official@shantisongho.org"
+                  >official@shantisongho.org</a
                 >
               </div>
               <div class="help-contact">
