--- a/html/index.html
+++ b/html/index.html
@@ -14,27 +14,11 @@
       <div class="nav-container">
         <div class="nav-logo" onclick="logoRefresh()">
           <div class="logo-icon">
-            <svg
-              width="40"
-              height="40"
-              viewBox="0 0 40 40"
-              fill="none"
-              xmlns="http://www.w3.org/2000/svg"
-            >
-              <circle
-                cx="20"
-                cy="20"
-                r="19"
-                stroke="#1e7e34"
-                stroke-width="2"
-              />
-              <path d="m20 8 8 10-8 4 8 4Z" fill="#1e7e34" />
-              <path
-                d="M16 18c0-1 .5-2 1.5-2h5c1-2 2.5-2 3.5 0v6c0 1-.5 2-1.5 2h-5c-1 0-1.5-1-1.5-2Z"
-                fill="#4caf50"
-              />
-              <circle cx="20" cy="30" r="2" fill="#2196f3" />
-            </svg>
+            <img
+              src="/logo/without_bg_logo.png"
+              alt="nav-logo"
+              class="nav-logo-img"
+            />
           </div>
           <div class="logo-text">
             <h1>শান্তিসংঘ</h1>
@@ -108,27 +92,11 @@
         <div class="container">
           <div class="hero-content">
             <div class="hero-logo">
-              <svg
-                width="120"
-                height="120"
-                viewBox="0 0 120 120"
-                fill="none"
-                xmlns="http://www.w3.org/2000/svg"
-              >
-                <circle
-                  cx="60"
-                  cy="60"
-                  r="58"
-                  stroke="#1e7e34"
-                  stroke-width="4"
-                />
-                <path d="M60 20L80 60L60 90L20 60Z" fill="#1e7e34" />
-                <path
-                  d="M40 40c0-3 1.5-6 4.5-6h15c3 0 4.5 3 4.5 6v20c0 3-1.5 6-4.5 6H44.5c-3 0-4.5-3-4.5-6Z"
-                  fill="#4caf50"
-                />
-                <circle cx="60" cy="90" r="6" fill="#2196f3" />
-              </svg>
+              <img
+                src="/logo/without_bg_logo.png"
+                alt="nav-logo"
+                class="main-contant-logo"
+              />
             </div>
 
             <h1 class="hero-title">শান্তিসংঘ</h1>
