--- a/html/signup.html
+++ b/html/signup.html
@@ -12,27 +12,11 @@
       <div class="nav-container">
         <div class="nav-logo" onclick="logoRefresh()">
           <div class="logo-icon">
-            <svg
-              width="40"
-              height="40"
-              viewBox="0 0 40 40"
-              fill="none"
-              xmlns="http://www.w3.org/2000/svg"
-            >
-              <circle
-                cx="20"
-                cy="20"
-                r="19"
-                stroke="#1e7e34"
-                stroke-width="2"
-              />
-              <path d="m20 8 8 10-8 4 8 4Z" fill="#1e7e34" />
-              <path
-                d="M16 18c0-1 .5-2 1.5-2h5c1-2 2.5-2 3.5 0v6c0 1-.5 2-1.5 2h-5c-1 0-1.5-1-1.5-2Z"
-                fill="#4caf50"
-              />
-              <circle cx="20" cy="30" r="2" fill="#2196f3" />
-            </svg>
+            <img
+              src="/logo/without_bg_logo.png"
+              alt="nav-logo"
+              class="nav-logo-img"
+            />
           </div>
           <div class="logo-text">
             <h1>শান্তিসংঘ</h1>
@@ -103,27 +87,11 @@
         <div class="signup-card">
           <div class="signup-header">
             <div class="signup-logo">
-              <svg
-                width="80"
-                height="80"
-                viewBox="0 0 80 80"
-                fill="none"
-                xmlns="http://www.w3.org/2000/svg"
-              >
-                <circle
-                  cx="40"
-                  cy="40"
-                  r="38"
-                  stroke="#1e7e34"
-                  stroke-width="4"
-                />
-                <path d="M40 16L56 40L40 64L16 40Z" fill="#1e7e34" />
-                <path
-                  d="M28 28c0-2 1-4 3-4h10c2-4 5-4 7 0v12c0 2-1 4-3 4H31c-2 0-3-2-3-4Z"
-                  fill="#4caf50"
-                />
-                <circle cx="40" cy="64" r="4" fill="#2196f3" />
-              </svg>
+              <img
+                src="/logo/without_bg_logo.png"
+                alt="nav-logo"
+                class="main-logo-img"
+              />
             </div>
             <div class="signup-title">
               <h1>Join SHANTISONGHO</h1>
