--- a/html/login.html
+++ b/html/login.html
@@ -53,7 +53,7 @@
       <!-- Mobile Menu -->
       <div class="mobile-menu" id="mobileMenu">
         <div class="mobile-menu-content">
-          <button class="mobile-nav-btn" onclick="navigateTo('mainpage.html')">
+          <button class="mobile-nav-btn" onclick="navigateTo('index.html')">
             Home
           </button>
           <button class="mobile-nav-btn active">Login</button>
